challenges/gallery/02-mysql-deployment.yaml
# Использование emptyDir, т.е. временного тома в POD, для базы данных ты вряд ли встретишь в реальной жизни
# Здесь мы просто тренируем разные варианты
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lychee-db

spec:
  selector:
    matchLabels:
      db: mariadb
  replicas: 1
  template:
    metadata:
      labels:
        db: mariadb
    spec:
      containers:
        - image: mariadb:10.6
          name: mariadb
          volumeMounts:
            - name: db
              mountPath: /var/lib/mysql
      volumes:
        - name: db
          emptyDir: {}
