challenges/gallery/04-galery-deployment.yaml
# По заданию мы объявляем переменные явно в манифесте, а также из secret и из configmap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lychee-gallery
spec:
  selector:
    matchLabels:
      run: lychee-gallery
  replicas: 1
  template:
    metadata:
      labels:
        run: lychee-gallery
    spec:
      containers:
        - name: lychee-gallery-container
          image: linuxserver/lychee:4.4.0
          resources:
              limits:
                memory: 100Mi
                cpu: 50m
          volumeMounts:
            - name: config
              mountPath: /config
            - name: images
              mountPath: /pictures
      volumes:
        - name: config
          emptyDir: {}
        - name: images
          emptyDir: {}
