challenges/gallery/07-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lychee-gallery-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: image-stock-free.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lychee-gallery-service
            port:
              number: 80
