challenges/gallery/06-networkpolicy.yaml
# Это правило работает с POD базы данных, разрешая трафик только с POD галереи и на порт 3306
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: lychee-gallery-firewall
spec:
  podSelector:
    matchLabels:
      db: mariadb
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: lychee-gallery
    ports:
    - protocol: TCP
      port: 3306
